--- a/style.css
+++ b/style.css
@@ -9,14 +9,16 @@ body {
   }
   
   .page {
-    width: 100vh;
+    width: 1000px;
     margin: 0 auto;
     padding-top: 65px;
   }
   
   nav {
     display: flex;
-    margin-bottom: 15px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 55px;
   }
   
   ul {
@@ -24,8 +26,7 @@ body {
     justify-content: flex-end;
     list-style: none;
     margin: 0;
-    margin-left: 50vh;
-    gap: 50px;
+    gap: 48px;
   }
 
   #logo{
@@ -34,8 +35,9 @@ body {
   }
 
   .hero{
-    display:flex;
-    padding-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   a {
@@ -82,6 +84,7 @@ body {
   
   button {
     color: white;
+    text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
   
     background: #69B99D;
